# ugotsuka

./: .gitignore  README.md  cargo-errors.txt  index.html  package-lock.json  package.json  vite.config.ts
docs/: ICON_DEBUG.md
src/: App.tsx  ErrorBoundary.tsx  main.tsx  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: balance.rs  lib.rs  main.rs  monitor_enabled.rs  monitored_apps.rs  process_monitor.rs
src/pages/: ExercisePage.tsx  MonitorPage.tsx  SettingsPage.tsx
